[tool.poetry]
name = "kaspadiscord"
version = "0.1.0"
description = ""
authors = ["Kkcool <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
discord = "^1.7.3"
kaspy = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
